# ohnonogram-python

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: black.yml  python-package.yml
example_puzzles/: example_1_25x25.txt  example_2_10x10.txt
ohnonogram/: nonogram.py  solver.py
scripts/: permutation_dfs_10x10.py  simple_dfs_10x10.py
tests/: test_nonogram_puzzle.py
