[tool.poetry]
name = "ohnonogram-python"
version = "0.1.0"
description = "A python-based nonogram solver."
license = "GPL-3.0-or-later"
authors = [
    "Wesley Henderson <wesley.henderson11@gmail.com>",
]
readme = "README.md"
packages = [
    { include = "ohnonogram" }
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.24"

[tool.poetry.group.dev.dependencies]
mypy = "*"
black = "*"
pre-commit = "*"
isort = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-unordered = "*"
