[tool.poetry]
name = "ohnonogram-python"
version = "0.1.0"
description = "A python-based nonogram solver."
license = "GPL-3.0-or-later"
authors = [
    "Wesley Henderson <wesley.henderson11@gmail.com>",
]
readme = "README.md"
packages = [
    { include = "ohnonogram" }
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.24"

[tool.poetry.group.dev.dependencies]
mypy = "*"
black = "23.3.0"
pre-commit = "3.2.0"
isort = "5.12.0"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-unordered = "*"

[tool.isort]
profile = "black"
